kubernetes/neo/apps/default/homeassistant/app/external-svc-ep.yaml
---
# endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
subsets:
  - addresses:
      - ip: 192.168.20.5
    ports:
      - port: 8123
        protocol: TCP
---
# service.yaml
---
# endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
subsets:
  - addresses:
      - ip: 192.168.20.5
    ports:
      - port: 8123
        protocol: TCP
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - port: 8123
      protocol: TCP
      targetPort: 8123
      name: http-homeassistant
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
